# earth-extractor

./: .gitignore  CHANGELOG.md  README.md  coverage.sh  earth_explorer.py  earth_extractor.py  geom.geojson  pyproject.toml  satdata.py
.github/workflows/: publish.yml  pytest.yml
earth_extractor/: app.py  classes.py  cli_options.py  config.py  earth_extractor.py  enums.py  models.py  providers.py  satellites.py  utils.py
earth_extractor/core/: __init__.py  config.py  credentials.py  logging.py  models.py  query.py  utils.py
earth_extractor/providers/: __init__.py  alaskan_satellite_facility.py  base.py  copernicus.py  nasa.py  scihub.py  sinergise.py  swisstopo.py
earth_extractor/providers/extensions/: asf_search.py  sentinelsat.py
earth_extractor/satellites/: __init__.py  base.py  enums.py  modis.py  sentinel.py  swissimage.py  viirs.py
satdata/: enums.py
tests/: conftest.py
tests/cli/: test_batch_download.py  test_credentials.py
tests/core/: test_query.py  test_utils.py
tests/providers/: conftest.py  test_asf.py  test_nasa.py  test_scihub.py
tests/resources/query/: nasa-stac-query-response.json  sion-sentinel2-l2a.geojson
tests/resources/roi/: switzerland-country-boundary.geojson  switzerland-sion-point-alpole.geojson  switzerland-sion-polygon.geojson
