[tool.poetry]
name = "earth-extractor"
version = "0.1.0"
description = "A library to simplify the workflow of data acquisition from multiple satellite data providers"
authors = ["Evan Thomas <evan.thomas@epfl.ch>"]
readme = "README.md"

[tool.poetry.scripts]
earth-extractor = 'earth_extractor.app:main'

[tool.poetry.dependencies]
python = "^3.9"
botocore = "1.29.133"
typer = "^0.9.0"
rich = "^13.3.5"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
openeo = "^0.18.0"
sentinelsat = "^1.2.1"
asf-search = "^6.5.0"
sentinelhub = "^3.9.1"
keyring = "^24.2.0"
shapely = "^2.0.1"
ascii-art = "^0.1.0"
tenacity = "^8.2.2"
geopandas = "^0.13.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest-watch = "^4.2.0"
jupyterlab = "^4.0.2"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov --cov-report=lcov --cov-report=term"
