[tool.poetry]
name = "earth-extractor"
version = "0.1.3"
description = "A library to simplify the workflow of data acquisition from multiple satellite data providers"
authors = ["Evan Thomas <evan.thomas@epfl.ch>"]
readme = "README.md"

[tool.poetry.scripts]
earth-extractor = 'earth_extractor.app:main'

[tool.poetry.dependencies]
python = "^3.8"
botocore = "1.29.133"
typer = "^0.9.0"
rich = "^13.3.5"
pydantic = { extras = ["dotenv"], version = "^1.10.9" }
openeo = "^0.18.0"
sentinelsat = "^1.2.1"
asf-search = "^6.5.0"
sentinelhub = "^3.9.1"
keyring = "^24.2.0"
shapely = "^2.0.1"
tenacity = "^8.2.2"
geopandas = "^0.13.2"
pystac-client = "^0.7.2"
aiohttp = "^3.8.5"
types-requests = "^2.31.0.2"
pyjwt = "^2.8.0"
orjson = "^3.9.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
jupyterlab = "^4.0.2"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
black = "^23.7.0"
pytest-watcher = "^0.3.4"
autoflake = "^2.2.0"
requests-mock = "^1.11.0"
pytest-env = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing"
env = ["PYTHON_KEYRING_BACKEND = keyring.backends.null.Keyring"]
